--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,11 @@ trigger:
 - main
 
 stages:
-  - stage: Build
+  - stage: Maven
     pool:
       vmImage: 'ubuntu-latest'
     jobs:
-      - job: Package
+      - job: Build
         steps:
         - task: Maven@3
           displayName: 'Maven Package'
@@ -19,29 +19,50 @@ stages:
             publishJUnitResults: true
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
             goals: 'clean package'
-
-  - stage: Deploy
+  
+  - stage: Docker
+    displayName: 'Docker'
+    pool:
+      vmImage: 'ubuntu-latest'
     jobs:
-    - deployment: Dev
-      displayName: Development
-      workspace:
-        clean: all
-      dependsOn: Build
-      # condition: string
-      continueOnError: false
-      # container: containerReference # container to run this job inside
-      # services: { string: string | container } # container resources to run as a service container
-      # timeoutInMinutes: nonEmptyString        # how long to run the job before automatically cancelling
-      # cancelTimeoutInMinutes: nonEmptyString  # how much time to give 'run always even if cancelled tasks' before killing them
-      # variables: # several syntaxes, see specific section
-      environment: Dev.akskratos
-      strategy:
-        runOnce:    #rolling, canary are the other strategies that are supported
-          deploy:
-            steps:
-            - checkout: self
-            - task: KubernetesManifest@0
-              inputs:
-                action: 'deploy'
-                namespace: 'default'
-                manifests: 'deployment.yaml'
+      - job: Build
+        steps:
+        - task: DockerInstaller@0
+          displayName: 'Install'
+          inputs:
+            dockerVersion: '17.09.0-ce'
+        - task: Docker@2
+          displayName: 'Build and Push'
+          inputs:
+            containerRegistry: 'Docker Registry'
+            repository: 'hello-world'
+            command: 'buildAndPush'
+            Dockerfile: '**/Dockerfile'
+            tags: '$(Build.BuildId)'
+
+  # - stage: Deploy
+  #   displayName: 'Deploy K8s'
+  #   jobs:
+  #   - deployment: Dev
+  #     displayName: Development
+  #     workspace:
+  #       clean: all
+  #     dependsOn: Build
+  #     # condition: string
+  #     continueOnError: false
+  #     # container: containerReference # container to run this job inside
+  #     # services: { string: string | container } # container resources to run as a service container
+  #     # timeoutInMinutes: nonEmptyString        # how long to run the job before automatically cancelling
+  #     # cancelTimeoutInMinutes: nonEmptyString  # how much time to give 'run always even if cancelled tasks' before killing them
+  #     # variables: # several syntaxes, see specific section
+  #     environment: Develoment.default
+  #     strategy:
+  #       runOnce:    #rolling, canary are the other strategies that are supported
+  #         deploy:
+  #           steps:
+  #           - checkout: self
+  #           - task: KubernetesManifest@0
+  #             inputs:
+  #               action: 'deploy'
+  #               namespace: 'default'
+  #               manifests: 'deployment.yaml'
