Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 stages:
-  - stage: Maven
+  - stage: Build
     pool:
       vmImage: 'ubuntu-latest'
     jobs:
@@ -20,30 +20,10 @@ stages:
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
             goals: 'clean package'
 
-        - task: PublishPipelineArtifact@1
-          inputs:
-            targetPath: '$(Pipeline.Workspace)'
-            artifact: 'JAR'
-            publishLocation: 'pipeline'
-  
-  - stage: Docker
-    displayName: 'Docker'
-    pool:
-      vmImage: 'ubuntu-latest'
-    jobs:
-      - job: Build
-        steps:
         - task: DockerInstaller@0
           displayName: 'Install'
           inputs:
             dockerVersion: '17.09.0-ce'
-
-        - task: DownloadPipelineArtifact@2
-          inputs:
-            buildType: 'current'
-            artifactName: 'JAR'
-            itemPattern: '**.jar'
-            targetPath: '$(Pipeline.Workspace)'
 
         - task: Docker@2
           displayName: 'Build and Push'
