--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,21 +41,11 @@ stages:
     jobs:
     - deployment: Development
       displayName: 'Deploy Development'
-      workspace:
-        clean: all
-      # condition: string
-      continueOnError: false
-      # container: containerReference # container to run this job inside
-      # services: { string: string | container } # container resources to run as a service container
-      # timeoutInMinutes: nonEmptyString        # how long to run the job before automatically cancelling
-      # cancelTimeoutInMinutes: nonEmptyString  # how much time to give 'run always even if cancelled tasks' before killing them
-      # variables: # several syntaxes, see specific section
       environment: Development.default
       strategy:
-        runOnce: #runOnce, rolling, canary are the other strategies that are supported
+        runOnce:
           deploy:
             steps:
-            - checkout: self
             - task: KubernetesManifest@0
               inputs:
                 action: 'deploy'
