Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,4 +53,4 @@ stages:
             - task: KubernetesManifest@0
               inputs:
                 action: 'deploy'
-                manifests: '$(Pipeline.Workspace)/deployment.yml'
+                manifests: 'deployment.yml'
