--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,3 +54,4 @@ stages:
               inputs:
                 action: 'deploy'
                 manifests: 'deployment.yml'
+                containers: 'kvncont/hello-world:$(Build.BuildId)'
