Prueba de deployment en varios ambientes

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
             Dockerfile: '**/Dockerfile'
             tags: '$(Build.BuildId)'
 
-  - stage: CD-Dev
+  - stage: CD_DEV
     displayName: 'CD Dev Stage'
     dependsOn: CI
     jobs:
