--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,19 @@
 trigger:
-- master
-- feature/*
+  - master
+  - feature/*
+
+variables:
+
+  - name: k8sNamespaceForPR
+    value: $[variables['Build.SourceBranch']]
+
+  - name: resourceName
+    value: 'hello-world'
 
 stages:
+
   - stage: CI
-    displayName: CI Stage
+    displayName: CI - Stage
     pool:
       vmImage: ubuntu-latest
     jobs:
@@ -38,12 +47,39 @@ stages:
             tags: $(Build.BuildId)
 
   - stage: CD_DEV
-    displayName: CD Dev Stage
+    displayName: CD Dev - Stage
     dependsOn: CI
     jobs:
 
+    - deployment: DeployPRDev
+      displayName: Deploy Pull Request - Dev
+      condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull/'))
+      environment: Development.$(k8sNamespaceForPR)
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+
+            - reviewApp: $(resourceName)
+
+            - checkout: self
+
+            - task: Kubernetes@1
+              displayName: Create a new namespace for the pull request
+              inputs:
+                command: apply
+                useConfigurationFile: true
+                inline: '{ "kind": "Namespace", "apiVersion": "v1", "metadata": { "name": "$(k8sNamespaceForPR)" }}'
+
+            - task: KubernetesManifest@0
+              inputs:
+                action: deploy
+                manifests: deployment.yml
+                containers: kvncont/hello-world:$(Build.BuildId)
+                rolloutStatusTimeout: '300'
+
     - deployment: DeployDev
-      displayName: Deploy Dev
+      displayName: Deploy - Dev
       condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       environment: Development.app
       strategy:
@@ -61,13 +97,13 @@ stages:
                 rolloutStatusTimeout: '300'
 
   - stage: CD_PRO
-    displayName: CD Pro Stage
+    displayName: CD Pro - Stage
     dependsOn: CD_DEV
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     jobs:
 
-    - deployment: DeployProEastUS2
-      displayName: Deploy Pro East US 2
+    - deployment: DeployEastUS2Pro
+      displayName: Deploy East US 2 - Pro
       environment: Production.eastus2
       strategy:
         runOnce:
@@ -83,8 +119,8 @@ stages:
                 containers: kvncont/hello-world:$(Build.BuildId)
                 rolloutStatusTimeout: 300
             
-    - deployment: DeployProCentralUS
-      displayName: Deploy Pro Central US
+    - deployment: DeployCentralUSPro
+      displayName: Deploy Central US - Pro
       environment: Production.centralus
       strategy:
         runOnce:
