--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ variables:
     value: $[variables['Build.SourceBranch']]
 
   - name: resourceName
-    value: 'hello-world'
+    value: app
 
 stages:
 
