Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ stages:
           deploy:
             steps:
 
-            - reviewApp: $(resourceName)
+            - reviewApp: app
 
             - checkout: self
 
