--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,12 +68,19 @@ stages:
 
           - checkout: self
 
-          # - task: Kubernetes@1
-          #   displayName: Create a new namespace for the pull request
-          #   inputs:
-          #     command: apply
-          #     useConfigurationFile: true
-          #     inline: '{ "kind": "Namespace", "apiVersion": "v1", "metadata": { "name": "$(k8sNamespaceForPR)" }}'
+          - task: Kubernetes@1
+            displayName: Create a new namespace for the pull request
+            inputs:
+              connectionType: 'Kubernetes Service Connection'
+              kubernetesServiceEndpoint: 'k8s-akskratos-app'
+              command: 'apply'
+              useConfigurationFile: true
+              configurationType: 'inline'
+              inline: |
+                apiVersion: v1
+                kind: Namespace
+                metadata:
+                  name: '$(k8sNamespaceForPR)'
 
           - task: KubernetesManifest@0
             inputs:
