--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,12 +41,20 @@ stages:
           dockerVersion: 17.09.0-ce
 
       - task: Docker@2
-        displayName: Build and Push
+        displayName: Docker Build
+        inputs:
+          repository: kvncont/hello-world
+          command: build
+          Dockerfile: '**/Dockerfile'
+          tags: $(Build.BuildId)
+
+      - task: Docker@2
+        displayName: Docker Push
+        condition: and(succeeded(), or(startsWith(variables['Build.SourceBranch'], 'refs/pull/'), eq(variables['Build.SourceBranch'], 'refs/heads/master')))
         inputs:
           containerRegistry: Docker Registry
           repository: kvncont/hello-world
-          command: buildAndPush
-          Dockerfile: '**/Dockerfile'
+          command: push
           tags: $(Build.BuildId)
 
 - stage: CD_DEV
@@ -55,40 +63,40 @@ stages:
   dependsOn: CI
   jobs:
 
-  - deployment: DeployPRDev
-    displayName: Deploy Pull Request - Dev
-    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull/'))
-    environment: Development.$(k8sNamespaceForPR)
-    strategy:
-      runOnce:
-        deploy:
-          steps:
+  # - deployment: DeployPRDev
+  #   displayName: Deploy Pull Request - Dev
+  #   condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull/'))
+  #   environment: Development.$(k8sNamespaceForPR)
+  #   strategy:
+  #     runOnce:
+  #       deploy:
+  #         steps:
 
-          - reviewApp: app
+  #         - reviewApp: app
 
-          - checkout: self
+  #         - checkout: self
 
-          - task: Kubernetes@1
-            displayName: Create a new namespace for the pull request
-            inputs:
-              connectionType: 'Kubernetes Service Connection'
-              kubernetesServiceEndpoint: 'k8s-akskratos-app'
-              command: 'apply'
-              useConfigurationFile: true
-              configurationType: 'inline'
-              inline: |
-                apiVersion: v1
-                kind: Namespace
-                metadata:
-                  name: '$(k8sNamespaceForPR)'
+  #         - task: Kubernetes@1
+  #           displayName: Create a new namespace for the pull request
+  #           inputs:
+  #             connectionType: 'Kubernetes Service Connection'
+  #             kubernetesServiceEndpoint: 'k8s-akskratos-app'
+  #             command: 'apply'
+  #             useConfigurationFile: true
+  #             configurationType: 'inline'
+  #             inline: |
+  #               apiVersion: v1
+  #               kind: Namespace
+  #               metadata:
+  #                 name: '$(k8sNamespaceForPR)'
 
-          - task: KubernetesManifest@0
-            inputs:
-              action: 'deploy'
-              namespace: '$(k8sNamespaceForPR)'
-              manifests: 'deployment.yml'
-              containers: 'kvncont/hello-world:$(Build.BuildId)'
-              rolloutStatusTimeout: '300'
+  #         - task: KubernetesManifest@0
+  #           inputs:
+  #             action: 'deploy'
+  #             namespace: '$(k8sNamespaceForPR)'
+  #             manifests: 'deployment.yml'
+  #             containers: 'kvncont/hello-world:$(Build.BuildId)'
+  #             rolloutStatusTimeout: '300'
 
   - deployment: DeployDev
     displayName: Deploy - Dev
