Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,14 +26,16 @@ stages:
       - task: Maven@3
         displayName: Maven Package
         inputs:
-          mavenPomFile: pom.xml
-          mavenOptions: -Xmx3072m
-          javaHomeOption: JDKVersion
-          jdkVersionOption: 1.8
-          jdkArchitectureOption: x64
+          mavenPomFile: 'pom.xml'
+          goals: 'clean package'
           publishJUnitResults: true
           testResultsFiles: '**/surefire-reports/TEST-*.xml'
-          goals: clean package
+          codeCoverageToolOption: 'JaCoCo'
+          codeCoverageRestoreOriginalPomXml: true
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.8'
+          mavenVersionOption: 'Default'
+          mavenOptions: '-Xmx3072m'
 
       - task: DockerInstaller@0
         displayName: Docker Install
