--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,13 @@
 trigger:
 - master
+- develop
 - feature/*
+- hotfix/*
+- fix/*
 
 pr:
 - master
-
-variables:
-
-- name: k8sNamespaceForPR
-  value: app-pr-$(System.PullRequest.PullRequestId)
-
-- name: resourceName
-  value: app
+- develop
 
 stages:
 
@@ -59,6 +55,13 @@ stages:
           command: push
           tags: $(Build.BuildId)
 
+      - task: PublishPipelineArtifact@1
+        displayName: Upload Manifest
+        inputs:
+          targetPath: $(Pipeline.Workspace)/deployment.yml
+          artifact: manifest
+          publishLocation: pipeline
+
 - stage: CD_DEV
   displayName: CD Dev - Stage
   condition: and(succeeded(), or(startsWith(variables['Build.SourceBranch'], 'refs/pull/'), eq(variables['Build.SourceBranch'], 'refs/heads/master')))
@@ -74,7 +77,11 @@ stages:
         deploy:
           steps:
 
-          - checkout: self
+          - task: DownloadPipelineArtifact@2
+            inputs:
+              buildType: 'current'
+              artifactName: 'manifest'
+              targetPath: '$(Pipeline.Workspace)/deployment.yml'
 
           - task: KubernetesManifest@0
             displayName: Create Secret
