--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,6 +67,37 @@ stages:
   dependsOn: CI
   jobs:
 
+  - deployment: DeployPRDev
+    displayName: Deploy Pull Request - Dev
+    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull/'))
+    environment: Development.$(k8sNamespaceForPR)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+
+          - reviewApp: app
+
+          - task: Kubernetes@1
+            displayName: Create a new namespace for the pull request
+            inputs:
+              command: apply
+              useConfigurationFile: true
+              useClusterAdmin: true
+              configurationType: inline
+              inline: |
+                apiVersion: v1
+                kind: Namespace
+                metadata:
+                  name: '$(k8sNamespaceForPR)'
+          - task: KubernetesManifest@0
+            inputs:
+              action: deploy
+              namespace: $(k8sNamespaceForPR)
+              manifests: $(Pipeline.Workspace)/manifest/deployment.yml
+              containers: kvncont/hello-world:$(Build.BuildId)
+              rolloutStatusTimeout: 300
+
   - deployment: DeployDev
     displayName: Deploy - Dev
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
@@ -88,7 +119,7 @@ stages:
             displayName: Deploy Manifest
             inputs:
               action: deploy
-              manifests: deployment.yml
+              manifests: $(Pipeline.Workspace)/manifest/deployment.yml
               containers: kvncont/hello-world:$(Build.BuildId)
               rolloutStatusTimeout: '300'
 
