Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,10 @@ pr:
 - master
 - develop
 
+variables:
+- name: k8sNamespaceForPR
+  value: app-pr-$(System.PullRequest.PullRequestId) 
+
 stages:
 
 - stage: CI
