--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pr:
 
 variables:
 - name: k8sNamespaceForPR
-  value: app-pr-$(System.PullRequest.PullRequestId) 
+  value: pull-requests 
 
 stages:
 
@@ -82,18 +82,19 @@ stages:
 
           - reviewApp: app
 
-          - task: Kubernetes@1
-            displayName: Create a new namespace for the pull request
-            inputs:
-              command: apply
-              useConfigurationFile: true
-              useClusterAdmin: true
-              configurationType: inline
-              inline: |
-                apiVersion: v1
-                kind: Namespace
-                metadata:
-                  name: '$(k8sNamespaceForPR)'
+#           - task: Kubernetes@1
+#             displayName: Create a new namespace for the pull request
+#             inputs:
+#               command: apply
+#               useConfigurationFile: true
+#               useClusterAdmin: true
+#               configurationType: inline
+#               inline: |
+#                 apiVersion: v1
+#                 kind: Namespace
+#                 metadata:
+#                   name: '$(k8sNamespaceForPR)'
+
           - task: KubernetesManifest@0
             inputs:
               action: deploy
