--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,10 +28,10 @@ stages:
         inputs:
           mavenPomFile: pom.xml
           goals: clean package
-          publishJUnitResults: true
+          # publishJUnitResults: true
           testResultsFiles: '**/surefire-reports/TEST-*.xml'
-          codeCoverageToolOption: JaCoCo
-          codeCoverageRestoreOriginalPomXml: true
+          # codeCoverageToolOption: JaCoCo
+          # codeCoverageRestoreOriginalPomXml: true
           javaHomeOption: JDKVersion
           jdkVersionOption: 1.8
           mavenOptions: -Xmx3072m
@@ -99,13 +99,26 @@ stages:
                 metadata:
                   name: '$(k8sNamespaceForPR)'
 
-          - task: KubernetesManifest@0
+          - task: Kubernetes@1
             inputs:
-              action: deploy
-              namespace: $(k8sNamespaceForPR)
-              manifests: $(Pipeline.Workspace)/manifest/deployment.yml
-              containers: kvncont/hello-world:$(Build.BuildId)
-              rolloutStatusTimeout: 300
+              connectionType: 'Azure Resource Manager'
+              azureSubscriptionEndpoint: 'azure-service-connection-development-rg-akskratos'
+              azureResourceGroup: 'rg-akskratos'
+              kubernetesCluster: 'akskratos'
+              useClusterAdmin: true
+              namespace: '$(k8sNamespaceForPR)'
+              command: 'apply'
+              useConfigurationFile: true
+              configuration: 'deployment.yml'
+              workingDirectory: '$(Pipeline.Workspace)/manifest'
+
+          # - task: KubernetesManifest@0
+          #   inputs:
+          #     action: deploy
+          #     namespace: $(k8sNamespaceForPR)
+          #     manifests: $(Pipeline.Workspace)/manifest/deployment.yml
+          #     containers: kvncont/hello-world:$(Build.BuildId)
+          #     rolloutStatusTimeout: 300
 
   - deployment: DeployDev
     displayName: Deploy - Dev
